# bc-analytics-bot

./: README.md
core/: .dockerignore  .env.template  Makefile  README.md  pyproject.toml
core/docker/: Dockerfile  docker-compose.yml
core/entrypoints/: telegram_bot.py
core/infra/: settings.py
core/models/: participants.py  telegram_message.py
core/services/: export.py  parser.py
core/telegram_bot/: bot.py
core/tests/: test_export.py  test_parser.py
