[project]
name = "bc-analytics-bot"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "dotenv-linter>=0.7.0",
    "mypy>=1.19.0",
    "pandas-stubs>=2.3.3.251219",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "types-openpyxl>=3.1.5.20250919",
]

[tool.ruff]
extend-exclude = []
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ASYNC",# flake8-async
    "B",    # flake8-bugbear
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "RUF",  # Ruff-specific rules
    "PL",   # Pylint
    "C90",  # mccabe
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "F",    # Pyflakes
    "E",    # pcodestyle
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "T20",  # flake8-print
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "FIX",  # flake8-fixme
    "ERA",  # eradicate
]

ignore = [
    "COM812",
]

[tool.ruff.lint.isort]
known-first-party = []
force-sort-within-sections = true
order-by-type = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
plugins = ["pydantic.mypy"]
explicit_package_bases = true
strict = true
exclude = []
